# seclogs

./: .gitignore  Cargo.toml  PLAN.md  README.md  pyproject.toml
.github/workflows/: approved-pr-tests.yml  artifacts.yml  docs.yml
crates/seclog-actors-parquet/: Cargo.toml
crates/seclog-actors-parquet/src/: lib.rs
crates/seclog-cli/: Cargo.toml
crates/seclog-cli/src/: main.rs
crates/seclog-core/: Cargo.toml
crates/seclog-core/src/: actors.rs  config.rs  event.rs  lib.rs  rate.rs  traffic.rs  traits.rs
crates/seclog-formats-jsonl/: Cargo.toml
crates/seclog-formats-jsonl/src/: lib.rs
crates/seclog-formats-parquet/: Cargo.toml
crates/seclog-formats-parquet/src/: lib.rs
crates/seclog-sources-cloudtrail/: Cargo.toml
crates/seclog-sources-cloudtrail/src/: catalog.rs  generator.rs  lib.rs  model.rs  templates.rs
docs/: README.md  _config.yml  actors.md  analysis.md  cli.md  config.md  getting-started.md  index.md  python_bindings.md
examples/: actors.toml  all_sources.toml  all_sources_volume.toml  all_sources_zerobus.toml  config.toml  databricks_audit.toml  identity_registry.toml  okta_system_log.toml
python/seclog/: __init__.py
scripts/databricks/zerobus/: create_seclog_tables.sql
scripts/duckdb/: 01_summary.sql  02_sequences.sql  03_errors.sql  04_actor_chains.sql
scripts/duckdb/cloudtrail/parquet/: 01_summary.sql  02_sequences.sql  03_errors.sql  04_actor_chains.sql
scripts/duckdb/entra/parquet/: 01_payload_shape.sql
src/: actors_parquet.rs  api.rs  lib.rs  main.rs  python.rs
src/core/: activity.rs  actors.rs  config.rs  identity.rs  mod.rs
src/formats/: databricks_volume.rs  json.rs  mod.rs  parquet.rs  zerobus.rs
src/sources/: composite.rs  mod.rs
src/sources/cloudtrail/: catalog.rs  generator.rs  mod.rs  model.rs  templates.rs
src/sources/databricks/: generator.rs  mod.rs  model.rs
src/sources/entra_id/: catalog.rs  generator.rs  mod.rs  model.rs  templates.rs
src/sources/okta/: generator.rs  mod.rs  model.rs
