[package]
name = "seclog"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
python = ["dep:pyo3"]
zerobus = ["dep:databricks-zerobus-ingest-sdk", "dep:tokio"]
databricks_volume = ["dep:reqwest"]

[dependencies]
arrow-array = "51.0"
arrow-schema = "51.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["clock"] }
chrono-tz = "0.10"
databricks-zerobus-ingest-sdk = { version = "2.0.0", optional = true }
flate2 = "1.0"
parquet = { version = "51.0", features = ["arrow"] }
pyo3 = { version = "0.22", features = ["abi3-py39", "extension-module"], optional = true }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["net", "rt-multi-thread", "time"], optional = true }
toml = "0.8"
