[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "seclog"
version = "0.1.0"
description = "Python bindings for the seclog security log generator"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "seclog contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
]

[tool.maturin]
features = ["python"]
module-name = "seclog._native"
python-source = "python"
