[package]
name = "seclog-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
seclog-core = { path = "../seclog-core" }
seclog-formats-jsonl = { path = "../seclog-formats-jsonl" }
seclog-formats-parquet = { path = "../seclog-formats-parquet" }
seclog-sources-cloudtrail = { path = "../seclog-sources-cloudtrail" }
chrono = { version = "0.4", features = ["clock"] }
